--- a/exercise.tex
+++ b/exercise.tex
@@ -6,13 +6,67 @@
 \input{layout}
 
 % タイトルと氏名を変更せよ．
-\title{タイトル}
-\author{蓑原 隆}
+\title{日本におけるデジタル化の状況}
+\author{G584362025 黒澤 歩夢}
 
 \begin{document}
 
 \maketitle %ここにタイトルが入る
 
+\section{ブロードバインドの整備状況}
+OECDによるブロードバインド回線調査\cite{oecd}によると，
+図\ref{fig:加入者数}に示すように，
+日本における100あたりのモバイルブロードバンドの加入者数は190.5で,第１位になっている．
+２位エストニアで,３位米国と続く.
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.6\linewidth]{fig21.png}
+    \caption{光ファイバー回線の加入者数（100人あたり）}\label{fig:加入者数}
+\end{figure}
+
+\section{デジタル競争力ランキング}
+
+国際経営開発研究所（IMD）の調査\cite{imd}によると,
+表\ref{tbl:利用状況}に示すように，
+日本のデジタル競争力のランキングは調査対象の64カ国中,総合で28位,知識分野で25位となっている．
+
+\begin{table}[htbp]
+    \centering
+    \caption{デジタル競争力ランキング}
+    \label{tbl:利用状況}
+
+    \begin{tabular}{|l|r|r|}
+        \hline
+        国 & 総合 & 知識 \\
+        \hline
+        米国 & 1位 & 3位 \\
+        \hline
+        香港 & 2位 & 5位 \\
+        \hline
+        スウェーデン & 3位 & 2位 \\
+        \hline
+        デンマーク & 4位 & 8位 \\
+        \hline
+        シンガポール & 5位 & 4位 \\
+        \hline
+        \hline
+        韓国 & 12位 & 15位 \\
+        \hline 
+        中国 & 15位 & 6位 \\
+        \hline
+        \hline
+        日本 & 28位 & 25位 \\
+        \hline
+    \end{tabular}
+\end{table}
+
+\section{考察}
+\begin{itemize}
+    \item ブロードバンドの整備状況とデジタル競争力には相関はない。
+    \item 米国は高い水準でデジタル化が行われている。
+\end{itemize}
+% ーーー
 % ここから本文
 % 節見出し: \section{}
 % を使う
@@ -68,6 +122,7 @@
 
 % ここに参考文献が入る
 %
+
 \bibliographystyle{junsrt}
 \bibliography{exercise.bib}
 
